--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
+
+body{
+  background-image: url(https://i.pinimg.com/originals/a8/f6/a5/a8f6a5b6e25795ec7a068c7cfb4e48fa.gif);
+}
 tr:nth-child(even){
     background-color: brown;
 }
+
+th:hover{
+  background-color: darkred;
+}
+
 table{
   border-radius: 13px;
   background-image: url(download.jfif);
@@ -14,3 +23,15 @@ table{
   color: blueviolet;
   
 }
+.dco{
+  
+
+  background-color: rgb(43, 226, 98);
+  
+}
+.aviso{
+  background-color: rgb(255, 0, 0);
+  width:59%;
+  border-style: double ;
+}
+
